prodMetadata/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Membership_ID__c</fullName>
        <externalId>true</externalId>
        <label>Membership ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_In_Honor_Of__c</fullName>
        <description>The most recent entry in an &quot;In Honor Of&quot; field, e.g. on a Donation page or a campaign signup.</description>
        <inlineHelpText>The most recent entry in an &quot;In Honor Of&quot; field, e.g. on a Donation page or a campaign signup.</inlineHelpText>
        <label>Most Recent &quot;In Honor Of&quot;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Intake_Form_Case_Opened__c</fullName>
        <label>Most Recent Intake Form Case Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Unit__c</fullName>
        <label>Most Recent Unit</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Vouch_Date__c</fullName>
        <label>Most Recent Vouch Date</label>
        <summarizedField>npe4__Relationship__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>npe4__Relationship__c.npe4__Type__c</field>
            <operation>equals</operation>
            <value>Vouched for by</value>
        </summaryFilterItems>
        <summaryForeignKey>npe4__Relationship__c.npe4__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>My_Veteran_Story__c</fullName>
        <description>My Veteran Story (self-populated inside of COV)</description>
        <inlineHelpText>My Veteran Story (self-populated inside of COV)</inlineHelpText>
        <label>My Veteran Story (COV)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NGIB_Graduation_Date__c</fullName>
        <description>Anticipated graduation date or date of most recent graduation using NGIB benefits.</description>
        <inlineHelpText>Anticipated graduation date or date of most recent graduation using NGIB benefits.</inlineHelpText>
        <label>NGIB Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NGIB_School_Employer_Interest__c</fullName>
        <description>People who fill out the NGIB Calculator can email themselves results of their inquiry about a school or employer, this is that school or employer.</description>
        <inlineHelpText>People who fill out the NGIB Calculator can email themselves results of their inquiry about a school or employer, this is that school or employer.</inlineHelpText>
        <label>NGIB School / Employer Interest</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGIB_School_Name__c</fullName>
        <description>Name of school being attended or most recently attended using NGIB benefits.</description>
        <inlineHelpText>Name of school being attended or most recently attended using NGIB benefits.</inlineHelpText>
        <label>NGIB School Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGIB_School_Status__c</fullName>
        <description>Status as a for profit or not for profit institution</description>
        <inlineHelpText>Status as a for profit or not for profit institution</inlineHelpText>
        <label>NGIB School Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>For Profit</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NGIB_School_Type__c</fullName>
        <description>2 year, 4 year, Technical, or other</description>
        <inlineHelpText>2 year, 4 year, Technical, or other</inlineHelpText>
        <label>NGIB School Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>2-year school</fullName>
                </value>
                <value>
                    <fullName>4-year school</fullName>
                </value>
                <value>
                    <fullName>Other program (apprenticeship, certification program, etc.)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NVLSP_Consent_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should only be updated by an external consent form, either accompanying the initial signup or a followup consent form.</description>
        <inlineHelpText>This should only be updated by an external consent form, either accompanying the initial signup or a followup consent form.</inlineHelpText>
        <label>NVLSP Consent Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Press_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Press List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_GI_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact has used or is currently using New GI Bill benefits.</description>
        <inlineHelpText>Contact has used or is currently using New GI Bill benefits.</inlineHelpText>
        <label>New GI Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Email_Blasts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should Not Receive Online Blasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Veteran_Setter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Veteran Setter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_a_Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the contact has explicitly told us they are not a veteran, we store that info here</description>
        <label>Not a Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_About_Spokesperson__c</fullName>
        <label>Notes About Spokesperson</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_Accepted_Vouches__c</fullName>
        <label>Num. Accepted Vouches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Confirmed_Give_Requests__c</fullName>
        <description>Number of final confirmation give requests on member record</description>
        <inlineHelpText>Number of final confirmation give requests on member record</inlineHelpText>
        <label>Num. Confirmed Give Requests</label>
        <summaryFilterItems>
            <field>Give_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Final confirmation</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Applicant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Deployment_Records__c</fullName>
        <description>Rolls up number of affiliated Detailed Deployment Records for OEF/OIF/OND so a workflow rule can run off of it to un-check &quot;Did Not Deploy&quot;</description>
        <label>Num. OEF/OIF/OND Deployment Records</label>
        <summaryFilterItems>
            <field>Detailed_Deployment_Information__c.OEF_OIF__c</field>
            <operation>equals</operation>
            <value>OEF, OIF, OND, &quot;OIF, Operation Iraqi Freedom, Iraq (2003-2010)&quot;, &quot;OND, Operation New Dawn, Iraq (2010-2011)&quot;, &quot;OEF, Operation Enduring Freedom, Afghanistan (2001-Ongoing)&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Detailed_Deployment_Information__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Info_Requests__c</fullName>
        <description>Number of Info Requests that the member has received through the Rucksack</description>
        <inlineHelpText>Number of Info Requests that the member has received through the Rucksack</inlineHelpText>
        <label>Num. Info Requests</label>
        <summaryFilterItems>
            <field>Give_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Information sent</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Applicant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Invited_to_events__c</fullName>
        <label>Num. Invited to events</label>
        <summaryFilterItems>
            <field>npe4__Relationship__c.npe4__Type__c</field>
            <operation>equals</operation>
            <value>Invited to event</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npe4__Relationship__c.CreatedDate</field>
            <operation>greaterThan</operation>
            <value>1/1/2015 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>npe4__Relationship__c.npe4__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Recurring_Donations__c</fullName>
        <formula>Account.Num_Recurring_Donations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num. Recurring Donations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Vouches_Accepted__c</fullName>
        <description>Need to update year until we fix the year check method</description>
        <inlineHelpText>For StepUp</inlineHelpText>
        <label>Num. Vouches Accepted This year</label>
        <summaryFilterItems>
            <field>npe4__Relationship__c.npe4__Type__c</field>
            <operation>equals</operation>
            <value>Vouched for</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npe4__Relationship__c.CreatedDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>npe4__Relationship__c.npe4__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEF_Deployment__c</fullName>
        <label>OEF Deployment</label>
        <summaryFilterItems>
            <field>Detailed_Deployment_Information__c.OEF_OIF__c</field>
            <operation>equals</operation>
            <value>OEF</value>
        </summaryFilterItems>
        <summaryForeignKey>Detailed_Deployment_Information__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OEF_Setter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OEF Setter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OIF_Deployment__c</fullName>
        <label>OIF Deployment</label>
        <summaryFilterItems>
            <field>Detailed_Deployment_Information__c.OEF_OIF__c</field>
            <operation>equals</operation>
            <value>OIF</value>
        </summaryFilterItems>
        <summaryForeignKey>Detailed_Deployment_Information__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OIF_Setter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OIF Setter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OND_Setter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OND Setter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts/Design/Entertainment/Sports/Media</fullName>
                </value>
                <value>
                    <fullName>Building &amp; Grounds Cleaning/Maintenance</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Financial Operations</fullName>
                </value>
                <value>
                    <fullName>Community/Social Services</fullName>
                </value>
                <value>
                    <fullName>Computer &amp; Mathematical Architecture/Engineering</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Extraction</fullName>
                </value>
                <value>
                    <fullName>Education/Training/Library</fullName>
                </value>
                <value>
                    <fullName>Farming/Fishing/Forestry</fullName>
                </value>
                <value>
                    <fullName>Food Preparation/Serving Related</fullName>
                </value>
                <value>
                    <fullName>Healthcare Practitioner/Technical Healthcare Support</fullName>
                </value>
                <value>
                    <fullName>Installation/Maintenance/Repair</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Life/Physical/Social Science</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Military Specific</fullName>
                </value>
                <value>
                    <fullName>Office &amp; Administrative Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Care &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Protective Service</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Transportation &amp; Material Moving</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opened_Email_in_the_Last_90_Days__c</fullName>
        <formula>TODAY()-90 &lt; DATEVALUE(Last_Email_Opened_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opened Email in the Last 90 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opened_Email_in_the_Last_Year__c</fullName>
        <formula>TODAY()-365 &lt; DATEVALUE(Last_Email_Opened_Date__c)</formula>
        <label>Opened Email in the Last Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Political_Party__c</fullName>
        <description>Pulls Political Party from Office of KnowWho records</description>
        <formula>TEXT(Account.kw__Political_Party__c)</formula>
        <inlineHelpText>Pulls Political Party from Office of KnowWho records</inlineHelpText>
        <label>Org Political Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Relevant_Committees__c</fullName>
        <description>Committee assignments from the KW Org record (only looks for HVAC, SVAC, HASC, SASC, Edworkforce, HELP)</description>
        <formula>IF(INCLUDES( Account.kw__Committee_Membership__c  , &quot;HVET&quot;), &quot;HVET&quot; + &quot;, &quot; , NULL)  + 
IF(INCLUDES( Account.kw__Committee_Membership__c , &quot;SVET&quot;), &quot;SVET&quot; + &quot;, &quot; , NULL) + 
IF(INCLUDES( Account.kw__Committee_Membership__c , &quot;HARM&quot;), &quot;HARM&quot; + &quot;, &quot;, NULL) + 
IF(INCLUDES( Account.kw__Committee_Membership__c , &quot;SARM&quot;), &quot;SARM&quot; + &quot;, &quot;, NULL) + 
IF(INCLUDES( Account.kw__Committee_Membership__c , &quot;HEDU&quot;), &quot;HEDU&quot; + &quot;, &quot;, NULL) + 
IF(INCLUDES( Account.kw__Committee_Membership__c , &quot;SHELP&quot;), &quot;SHELP&quot; + &quot;, &quot;, NULL)</formula>
        <inlineHelpText>Committee assignments from the KW Org record (only looks for HVAC, SVAC, HASC, SASC, Edworkforce, HELP)</inlineHelpText>
        <label>Org Relevant Committees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_match_check__c</fullName>
        <description>Checks for Contacts whose name doesn&apos;t match the account name</description>
        <formula>if(  or(upper(trim(FirstName + &quot; &quot; +  LastName))  =  upper(trim(Account.Name)), upper(trim(LastName + &quot;, &quot; +  FirstName))  =  upper(trim(Account.Name)),upper(trim(LastName))  =  upper(trim(Account.Name))),&quot;&quot;,&quot;Contact: &quot; + Full_Name__c + &quot; and Org: &quot; + Account.Name )</formula>
        <inlineHelpText>Checks for Contacts whose name doesn&apos;t match the account name</inlineHelpText>
        <label>Org match check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Era_Setter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Era Setter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRU_FIXED__c</fullName>
        <formula>RIGHT(Pru_Survey_Link__c, 18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRU_FIXED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paperwork_Confirmation_Type__c</fullName>
        <label>Paperwork Confirmation Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Paperwork_Confirmation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Deployed OEF/OIF/OND</fullName>
                </value>
                <value>
                    <fullName>Deployed Elsewhere post 9/11</fullName>
                </value>
                <value>
                    <fullName>Not Deployed post 9/11</fullName>
                </value>
                <value>
                    <fullName>Pre-9/11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paperwork_Confirmation__c</fullName>
        <label>Paperwork Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paperwork Not Requested Yet</fullName>
                </value>
                <value>
                    <fullName>Paperwork Requested</fullName>
                </value>
                <value>
                    <fullName>Sent First Paperwork Reminder</fullName>
                </value>
                <value>
                    <fullName>Sent Second Paperwork Reminder</fullName>
                </value>
                <value>
                    <fullName>Standard Question/Issue</fullName>
                </value>
                <value>
                    <fullName>Paperwork Received</fullName>
                </value>
                <value>
                    <fullName>Paperwork Accepted</fullName>
                </value>
                <value>
                    <fullName>Paperwork Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paperwork_Issue__c</fullName>
        <description>When there is an issue with submitted paperwork, select the reason here.</description>
        <inlineHelpText>When there is an issue with submitted paperwork, select the reason here.</inlineHelpText>
        <label>Paperwork Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Paperwork_Confirmation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Upload Problem</fullName>
                </value>
                <value>
                    <fullName>Illegible</fullName>
                </value>
                <value>
                    <fullName>Unable to open</fullName>
                </value>
                <value>
                    <fullName>Email not found</fullName>
                </value>
                <value>
                    <fullName>No ICM, ACM, GWOTEM, or service dates</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paperwork_Received__c</fullName>
        <label>Paperwork Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Paperwork_Confirmation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DD214</fullName>
                </value>
                <value>
                    <fullName>Briefs</fullName>
                </value>
                <value>
                    <fullName>Evaluation Report</fullName>
                </value>
                <value>
                    <fullName>Award</fullName>
                </value>
                <value>
                    <fullName>VA Paperwork</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Medal</fullName>
                </value>
                <value>
                    <fullName>Record</fullName>
                </value>
                <value>
                    <fullName>DOD Papers</fullName>
                </value>
                <value>
                    <fullName>ACM (Afghanistan Campaign Medal)</fullName>
                </value>
                <value>
                    <fullName>CAB (Combat Action Badge)</fullName>
                </value>
                <value>
                    <fullName>ICM ( Iraqi Campaign Medal)</fullName>
                </value>
                <value>
                    <fullName>CIB (Combat Infantry Badge)</fullName>
                </value>
                <value>
                    <fullName>Purple Heart</fullName>
                </value>
                <value>
                    <fullName>GWOTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partnership Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Peer_Confirmation_Acceptance_Date__c</fullName>
        <description>Date the peer confirmation was accepted by the contact</description>
        <inlineHelpText>Date the peer confirmation was accepted by the contact</inlineHelpText>
        <label>Peer Confirmation Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Confirmed__c</fullName>
        <formula>IF (
    AND(
       Vouch_tally_rollup__c &gt;= 2 , 
       NOT(
          ISBLANK(Peer_Confirmation_Acceptance_Date__c)
       )
    ),
    &quot;True&quot;, 
    &quot;False&quot;
)</formula>
        <label>Peer Confirmed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_Invite_Decline_Date__c</fullName>
        <description>The date the nominee responded that they would not like to become a member</description>
        <label>Peer Invite Decline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Peer Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Level__c</fullName>
        <label>Performance Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Uncomfortable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_User_ID__c</fullName>
        <label>Pipeline User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_User_Token__c</fullName>
        <label>Pipeline User Token</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policy Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Political_Affiliation__c</fullName>
        <description>This field is for non-KnowWho records, so they can be seen by staff without access to KW fields</description>
        <label>Political Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Democratic Party</fullName>
                </value>
                <value>
                    <fullName>Republican Party</fullName>
                </value>
                <value>
                    <fullName>Tea Party</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Unaffiliated</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated user for portal (COV)</description>
        <inlineHelpText>Associated user for portal (COV)</inlineHelpText>
        <label>Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PortalContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_9_11_Veteran_Setter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post 9/11 Veteran Setter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_9_11_Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post 9/11 Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Total_Score__c</fullName>
        <description>Summary of Candidate Review Pre-Screen scores</description>
        <inlineHelpText>Summary of Candidate Review Pre-Screen scores (2 is highest score for each pre-screen review)</inlineHelpText>
        <label>Pre-Screen Total Score</label>
        <summarizedField>Candidate_Review__c.Pre_screen_Score__c</summarizedField>
        <summaryForeignKey>Candidate_Review__c.Candidate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Preferred_Public_Display_Name_Format__c</fullName>
        <label>Preferred Public Display Name Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>John Doe</fullName>
                </value>
                <value>
                    <fullName>J. Doe</fullName>
                </value>
                <value>
                    <fullName>John D.</fullName>
                </value>
                <value>
                    <fullName>Anonymous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Press_Contact_Notes__c</fullName>
        <label>Press Contact Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Press_Contact_Type__c</fullName>
        <label>Press Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Editorial</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Blogger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Press_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Press Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Press_Hits__c</fullName>
        <label>Press Hits</label>
        <summaryForeignKey>Press_Hits_Contacts__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Press_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Press Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Press_Outlet_temp__c</fullName>
        <description>Temporary field for Press Outlet on signup.  Must be transferred to an Organization lookup in the Press Outlet field for everything to work correctly.</description>
        <inlineHelpText>Temporary field for Press Outlet on signup.  Must be transferred to an Organization lookup in the Press Outlet field for everything to work correctly.</inlineHelpText>
        <label>Press Outlet temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_IAVA_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who on IAVA staff should be the individual that primarily interacts with this contact?</inlineHelpText>
        <label>Primary IAVA POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospecting_Stage__c</fullName>
        <label>Prospecting Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Grassroots Prospect</fullName>
                </value>
                <value>
                    <fullName>Circle of Valor Prospect</fullName>
                </value>
                <value>
                    <fullName>Leadership Council Prospect</fullName>
                </value>
                <value>
                    <fullName>Major Gifts Prospect</fullName>
                </value>
                <value>
                    <fullName>Corporate Prospect</fullName>
                </value>
                <value>
                    <fullName>Foundation Prospect</fullName>
                </value>
                <value>
                    <fullName>Archived Donor</fullName>
                </value>
                <value>
                    <fullName>DNS - Active Donor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pru_Survey_Link__c</fullName>
        <label>Pru Survey Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_for_NVLSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be automatically checked if three criteria are checked</description>
        <inlineHelpText>This will be automatically checked if three criteria are checked</inlineHelpText>
        <label>Qualified for NVLSP</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>